# Automated-Grinding

./: README.md
Automated-Grinding/JDH/jdh_ws_cx/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Automated-Grinding/JDH/jdh_ws_cx/devel/lib/: libmotion_planning_tasks_rviz_plugin.so.0.1.3  libmoveit_task_visualization_tools.so.0.1.3
Automated-Grinding/JDH/jdh_ws_cx/log/: latest_build
Automated-Grinding/JDH/jdh_ws_cx/logs/khi_duaro_ikfast_plugin/: build.make.000.log.stderr  build.make.028.log.stderr
Automated-Grinding/JDH/jdh_ws_cx/logs/khi_rs_ikfast_plugin/: build.make.000.log.stderr  build.make.028.log.stderr
Automated-Grinding/JDH/jdh_ws_cx/logs/my_mtc_package/: build.check.012.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
Automated-Grinding/JDH/jdh_ws_cx/src/Notes/: notes.nbk
Automated-Grinding/JDH/jdh_ws_cx/src/khi_cx_description/: CMakeLists.txt
Automated-Grinding/WWG/wwg_ws_cx/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
Automated-Grinding/WWG/wwg_ws_cx/src/khi_robot/: package.xml
Automated-Grinding/WWG/wwg_ws_cx/src/my_mtc_pkg/: CMakeLists.txt
Automated-Grinding/WWG/wwg_ws_cx/src/my_mtc_pkg/config/: mtc.rviz
Automated-Grinding/WWG/wwg_ws_cx/src/my_mtc_pkg/launch/: demo.launch  load_robot_description.launch  mtc_task_node.launch  run_task_constructor.launch
Automated-Grinding/WWG/wwg_ws_cx/src/my_mtc_pkg/scripts/: wait_for_service.sh
Automated-Grinding/WWG/wwg_ws_cx/src/my_mtc_pkg/src/: mtc_task_node.cpp  task_constructor_demo.cpp
test/: .~lock.test.odt#  test.odt
(+3937 files in other folders)
